--- a/SpecFlowSchool.Specs/SpecFlowSchool.Specs.csproj
+++ b/SpecFlowSchool.Specs/SpecFlowSchool.Specs.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Enums.NET" Version="4.0.2" />
+    <PackageReference Include="Faker.Net" Version="2.0.163" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
