added Windows section feature file and corresponding code

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /SpecFlowSchool/obj
 /.vs/SpecFlowSchool
 /SpecFlowSchool.Specs/Features/Elements.feature.cs
+/SpecFlowSchool.Specs/Features/Windows.feature.cs
