--- a/SpecFlowSchool.Specs/SpecFlowSchool.Specs.csproj
+++ b/SpecFlowSchool.Specs/SpecFlowSchool.Specs.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <SpecFlowObsoleteCodeBehindFiles Remove="Features\Elements - Copy.feature.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Enums.NET" Version="4.0.2" />
     <PackageReference Include="Faker.Net" Version="2.0.163" />
@@ -33,6 +37,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Features\Windows.feature.cs">
+      <DependentUpon>Windows.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Features\Windows.feature">
+      <Visible>$(UsingMicrosoftNETSdk)</Visible>
+      <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
+    </SpecFlowFeatureFiles>
     <SpecFlowFeatureFiles Update="Features\Elements.feature">    
       <Visible>$(UsingMicrosoftNETSdk)</Visible>
       <CodeBehindFile>%(RelativeDir)%(Filename).feature$(DefaultLanguageSourceExtension)</CodeBehindFile>
